# speech-denoiser-ml

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/audio/: audio.yaml
configs/data/: audio.yaml  dataset.yaml
configs/dataset/: dataset.yaml
configs/dvc/: dvc_cfg.yaml
configs/mlflow/: tracking.yaml
configs/model/: dae.yaml  demucs.yaml
configs/server/: triton.yaml
configs/trainer/: trainer.yaml
data/: .gitignore  test.dvc  train.dvc
plots/: README.md  metrics.csv  metrics_last_row.csv
plots/DAE_baseline/: metrics_last_row.csv  test_metrics.csv
plots/DAE_baseline/lightning_logs/version_0/: hparams.yaml
scripts/: build_trt_engine.ps1  build_trt_engine.sh  check_onnx.py  install_docker_custom.sh  run_triton.ps1  run_triton.sh
speech_denoiser/: __init__.py  commands.py  data.py  eval_test.py  export.py  infer.py  lightning_module.py  losses.py  train.py  triton.py  utils.py
speech_denoiser/models/: dae.py  demucs_wrapper.py
