[tool.poetry]
name = "speech-denoiser-ml"
version = "0.1.0"
description = "Package for training and inferencing ML model for speech enhancement"
authors = ["vetoshkin.is <114411040+nvclon@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "speech_denoiser"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

torch = ">=2.9.1,<3.0.0"
torchaudio = ">=2.9.1,<3.0.0"
pytorch-lightning = ">=2.6.0,<3.0.0"
hydra-core = ">=1.3.2,<2.0.0"
dvc = ">=3.64.2,<4.0.0"
mlflow = ">=3.7.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.5.1,<5.0.0"
black = ">=25.12.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
flake8 = ">=7.3.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
